...
    <string name="field_email_hint">Add email address</string>
    <string name="field_email_error">Invalid email address</string>
    <string name="field_email_tooltip_title">Add username field</string>
    <string name="field_email_tooltip_description">Tap here to add a field for a username.</string>
    <string name="field_username_title">Username</string>
    <string name="field_username_hint">Add username</string>
    <string name="field_username_or_email_title">Username or email address</string>
    <string name="field_username_or_email_hint">Add username or email address</string>
    <string name="field_password_title">Password</string>
    <string name="field_password_hint">Add password</string>
    <string name="field_website_address_title">Website</string>
    <string name="field_website_address_invalid">Invalid URL</string>
    <string name="field_website_address_hint">https://</string>
    <string name="field_website_add_another">Add</string>
    <string name="sticky_button_generate_password" comment="Sticky button on the Create login screen. When tapped, the Generate password bottomsheet is shown">Generate a new password</string>
    <string name="sticky_button_create_alias" comment="Sticky button on the Create login screen. When tapped, the Create alias bottomsheet is shown">Hide my email</string>
    <string name="sticky_button_use_account_email" comment="Sticky button on the Create login screen. When tapped, the current user email is autofilled">Use %s</string>
    <string name="create_login_item_creation_error">Could not create Login</string>
    <string name="create_login_item_update_error">Could not update Login</string>
    <string name="create_login_init_error">Problem retrieving login details</string>
    <string name="create_login_invalid_totp">The 2FA contents are not valid</string>
    <string name="update_login_attachments_init_error">Problem retrieving login attachments</string>
    <string name="login_attachments_error">Failed to link or unlink attachments to the login</string>
...
    <string name="bottomsheet_custom_field_type_totp">2FA secret key (TOTP)</string>
    <string name="bottomsheet_custom_field_option_edit">Edit name</string>
    <string name="bottomsheet_custom_field_option_remove">Remove field</string>
    <string name="bottomsheet_custom_field_option_remove_content_description">Remove custom field</string>
    <string name="bottomsheet_custom_section_option_remove">Remove section</string>
    <string name="create_login_add_custom_field_button">Add another field</string>
    <string name="custom_field_hidden_placeholder">Add hidden text</string>
    <string name="custom_field_hidden_icon_content_description">Hidden custom field icon</string>
    <string name="custom_field_text_placeholder">Add text</string>
    <string name="custom_field_dialog_title">Custom field name</string>
    <string name="custom_field_dialog_body">Give your custom field a name</string>
    <string name="custom_field_dialog_placeholder">E.g., User ID, PIN</string>
    <string name="custom_section_dialog_title">Enter a section title</string>
    <string name="custom_section_dialog_placeholder">Title</string>
    <string name="custom_field_options_content_description">Custom field options</string>
...
    <string name="identity_attachments_error">Failed to link or unlink attachments to the identity</string>
    <string name="create_identity_item_creation_error">Could not create identity</string>
    <string name="create_identity_item_creation_success">Identity created</string>
    <string name="update_identity_item_creation_success">Identity updated</string>
    <string name="update_identity_item_creation_error">Could not update identity</string>
    <!--  Common create items  -->
    <string name="title_create">Create</string>
    <string name="changes_saved">Changes saved</string>
    <!--  TOTP  -->
    <string name="totp_create_login_field_title">2FA secret key (TOTP)</string>
    <string name="totp_create_login_field_invalid">Invalid 2FA secret key (TOTP)</string>
    <string name="totp_create_login_field_placeholder">Add 2FA secret key (TOTP)</string>
    <string name="close_scree_icon_content_description">Close screen button</string>
    <string name="totp_paste_code_action">Paste code</string>
    <string name="totp_scan_code_action">Scan code</string>
    <string name="field_cannot_be_empty">This field cannot be empty</string>
    <string name="camera_permission_explanation">Camera permission required for this feature to be available.</string>
    <string name="camera_permission_open_settings">Open settings</string>
...
