...
    <!-- Empty list -->
    <string name="empty_list_title">Add your first item</string>
    <string name="empty_search_results_title">No result found</string>
    <string name="empty_list_open_extension">Visit web extension</string>
    <string name="empty_list_create_item_button">Create new item</string>
    <!-- Field -->
    <string name="field_title_title">Title</string>
    <string name="field_title_hint">Untitled</string>
    <string name="field_title_required">Title required</string>
    <string name="small_cross_icon_content_description">Small cross icon</string>
    <string name="field_note_title">Note</string>
    <string name="field_note_hint">Add note</string>
    <string name="linked_apps_title">Linked apps</string>
    <!-- Indicator that indicates lack of internet connectivity -->
    <string name="indicator_no_network">Offline</string>
    <!-- Icon content description -->
    <string name="missing_app_icon_content_description">Missing app icon</string>
...
    <string name="item_details_identity_section_contact_license_number_title">License number</string>
    <string name="item_details_identity_section_contact_website_title">Website</string>
    <string name="item_details_identity_section_contact_x_handle_title">X-Handle</string>
    <string name="item_details_identity_section_contact_secondary_phone_number_title">Secondary phone number</string>
    <string name="item_details_identity_section_contact_linkedin_title">LinkedIn</string>
    <string name="item_details_identity_section_contact_reddit_title">Reddit</string>
    <string name="item_details_identity_section_contact_facebook_title">Facebook</string>
    <string name="item_details_identity_section_contact_yahoo_title">Yahoo</string>
    <string name="item_details_identity_section_contact_instagram_title">Instagram</string>
    <string name="item_details_identity_section_work_title">Work details</string>
    <string name="item_details_identity_section_work_company_title">Company</string>
    <string name="item_details_identity_section_work_occupation_title">Occupation</string>
    <string name="item_details_identity_section_work_email_title">Work email address</string>
...
